2008-06-24  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_sub): bignum subtraction (working)
	(bignum_mul): bignum multiplication (slow)

2008-06-23  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_add): bignum addition (definitely not usable)

2008-06-20  Ales Hakl  <ales at hakl dot net>

	* dfsch/util.h (DFSCH_RWLOCK_RDLOCK): emulation of rwlock using mutex

2008-05-23  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_make_context): *dfsch-platform*

2008-05-14  Ales Hakl  <ales at hakl dot net>

	* src/system.c: get-internal-*-time

	* src/number.c: coorect promotion of large longs to flonum

2008-05-09  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): removed redundant append of buf

2008-04-30  Ales Hakl  <ales at hakl dot net>

	* src/hash.c: export DFSCH_STANDARD_HASH_TYPE

2008-04-28  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): fix -i

	* src/number.c (dfsch_number_mul): correct promotions for
	multiplication

2008-04-27  Ales Hakl  <ales at hakl dot net>

	* src/number.c: use _FACT_CADR() for numeric operators

	* dfsch/dfsch.h: use _FAST_CADR() macros in argument destructuring

2008-04-26  Ales Hakl  <ales at hakl dot net>

	* Makefile.am (nobase_include_HEADERS): install types.h

	* src/hash.c (hash_t): use rwlock instead of two mutexes

2008-04-25  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: pairs identified by tag in pointer, not first word

	* src/number.c: Direct fixnums (promotion is currently broken)

2008-04-17  Ales Hakl  <ales at hakl dot net>

	* lib/regex_mod.c (native_regex_match_once_p): missing dfsch_bool()

2008-04-14  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch__get_thread_info): use __thread on gcc

2008-04-11  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_new_frame_from_hash): environments as special
	object, not cons.
	(dfsch_lookup): eliminated consing

2008-04-06  Ales Hakl  <ales at hakl dot net>

	* lib/threads.c: solaris fixes
